...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SENNA ZINE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGf-Yx-Glf">
                                <rect key="frame" x="99" y="96" width="117" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="Naam"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="Ad9-As-K6N"/>
...
                                <rect key="frame" x="99" y="150" width="111" height="23"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="BwrkProfiel"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="111" id="rcb-Hc-dbb"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Mijn naam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l7W-H1-a3d">
                                <rect key="frame" x="20" y="220" width="119" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="MijNaam"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="sTU-6i-vF0"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Mijn geboortedatum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5f2-ON-mXs">
                                <rect key="frame" x="20" y="249" width="148" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="MijGeboorteDatum"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Mijn locatie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F63-nC-gN0">
                                <rect key="frame" x="20" y="294" width="119" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="MijnLocatie"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="TiT-d1-A98"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZIT-JE-T0j">
                                <rect key="frame" x="16" y="119" width="101" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="voornaam"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Voornaam " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHB-11-Wxu">
                                <rect key="frame" x="16" y="93" width="80" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="Voornaam"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="80" id="BP2-bO-zQV"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dag " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kGN-3L-dxs">
                                <rect key="frame" x="22" y="159" width="80" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="Dag"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4O-D0-FOL">
                                <rect key="frame" x="140" y="159" width="81" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="Maand"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lengte (in cm)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AN1-dv-PFq">
                                <rect key="frame" x="16" y="270" width="92" height="27"/>
                                <accessibility key="accessibilityConfiguration" identifier="Lengte"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Middel (in cm)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfN-O5-dtg">
                                <rect key="frame" x="173" y="270" width="101" height="27"/>
                                <accessibility key="accessibilityConfiguration" identifier="Middel"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wachtwoord" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="COz-rl-hR7">
                                <rect key="frame" x="16" y="521" width="92" height="19"/>
                                <accessibility key="accessibilityConfiguration" identifier="wachtwoord"/>
